--- a/src/test/resources/elements.html
+++ b/src/test/resources/elements.html
@@ -98,6 +98,9 @@
                 </select>
             </td>
         </tr>
+        <tr>
+            <td><a href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a></td>
+        </tr>
         </tbody>
     </table>
 </form>
